# melee

./: .gitignore  .pre-commit-config.yaml  CAMPAIGN-STATE-80242C0C.md  CAMPAIGN-STATE-80243434.md  CAMPAIGN-STATE-D1COMPLETION.md  CAMPAIGN-STATE-D2COMPLETION.md  CAMPAIGN-STATE-DIAGRAM2.md  CAMPAIGN-STATE-LEVERS2.md  CAMPAIGN-STATE-MNDIAGRAM3.md  CAMPAIGN-STATE.md  CLAUDE.md  DOORA-CORPUS-REPORT.md  REBASE_PLAN.md  configure.py  current.s.txt  debug_source.c  decomp.yaml  mndiagram.d  mwcc-debug-feedback-5-20-2026.md  mwcc-debug-feedback-5-21-2026.md  permuter_settings_802417D0.toml  permuter_settings_802417D0_minimal.toml  permuter_settings_802417D0_reorder_only.toml  target.s.txt
tools/melee-agent/: pyproject.toml
tools/melee-agent/scripts/: adjudicate_gate1b_labels.py  flatten_spike.py  permute_with_mwcc.py  slice_pcdump_function.py
tools/melee-agent/src/: attempt_evidence.py  harvest.py  launcher.py  source_transform_mining.py
tools/melee-agent/tests/: __init__.py  conftest.py  test_allocator_ceiling.py  test_allocator_intervention.py  test_ast_walker.py  test_attempt_evidence.py  test_attempts.py  test_audit_backfill.py  test_audit_c_analyzer.py  test_audit_commit_diagnostics.py  test_audit_db_connection.py  test_audit_decomp_analyzer.py  test_audit_net_new.py  test_audit_recover_matches.py  test_audit_signature_audit.py  test_audit_stack_home_and_virtattr.py  test_audit_struct_layout.py  test_candidate_verify.py  test_capabilities.py  test_capabilities_hooks.py  test_ceiling_decl_candidates.py  test_checkdiff_checker.py  test_checkdiff_fingerprint.py  test_checkdiff_name_magic.py  test_checkdiff_offset_discrepancies.py  test_checkdiff_reloc_normalize.py  test_checkdiff_stack_diagnostics.py  test_cli.py  (+139 more)
(+3077 files in other folders)
