[project]
name = "melee-decomp-agent"
version = "0.1.0"
description = "Agent tooling for contributing to the Melee decompilation project"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-c>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "respx>=0.21",
]

[project.scripts]
melee-agent = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E402",  # Module level import not at top of file (often intentional)
    "E501",  # Line too long (handled by formatter)
    "E722",  # Bare except (to be fixed incrementally)
    "E741",  # Ambiguous variable name (style preference)
    "F401",  # Unused import (many are intentional re-exports)
    "F841",  # Unused variable (many intentional for debugging/future use)
    "UP035", # Deprecated typing imports (to be fixed incrementally)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["src/cli/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
